[package]
name    = "either"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { version = "0.0.1" }
napi-derive-ohos = { version = "0.0.1" }

[build-dependencies]
napi-build-ohos = { version = "0.0.1" }
