[package]
name    = "reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { version = "*" }
napi-derive-ohos = { version = "*" }
reqwest = { version = "0.11", features = [
    "blocking",
    "json"
]}

[build-dependencies]
napi-build-ohos = { version = "*" }

[profile.release]
lto = true
