[package]
name = "reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { workspace = true, features = ["error_anyhow"] }
napi-derive-ohos = { workspace = true }
reqwest = { version = "=0.13.2", features = ["blocking", "json"] }

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto = true
