[package]
name    = "tokio_rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { workspace = true, features = ["tokio_rt","ohos"] }
napi-derive-ohos = { workspace = true }
tokio = { version = "1", features = ["default", "fs"] }
futures = "0.3"

[build-dependencies]
napi-build-ohos = { workspace = true }
